fix .hero-wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@
     --primary-color: #0F1B4C;
 }
 
+html,
+body {
+    scroll-behavior: smooth;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -74,6 +79,7 @@ a {
     position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     height: calc(100vh - 90px);
 }
 
@@ -117,15 +123,12 @@ a {
 }
 
 /* =====Hero===== */
-.hero {
-    margin-top: 130px;
-}
 
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
 
-.hero .sub-title {
+.hero-wrap .sub-title {
     font-weight: 500;
     font-size: 1.8rem;
     line-height: 1.5;
@@ -135,7 +138,7 @@ a {
 
 }
 
-.hero .title {
+.hero-wrap .title {
     margin-top: 8px;
     font-weight: 700;
     font-size: 6.2rem;
@@ -143,7 +146,7 @@ a {
     color: #000336;
 }
 
-.hero .desc {
+.hero-wrap .desc {
     margin-top: 30px;
     font-weight: 400;
     font-size: 1.8rem;
